优化使用 ,修复启动问题