@@ -23,30 +23,16 @@
 
 
 
+SERVICE_NAME=wlock
+DIR=`pwd`
+PID_PATH="$DIR"/server/tmp/pid
+PID_FILE="$PID_PATH"/"$SERVICE_NAME"
 
-source /etc/profile
-. JDK jdk1.8.0_66
-USAGE="Usage: startup.sh"
-SYSTEM_PROPERTY=""
+sh $DIR/server/bin/rshutdown.sh
 
-cd $(dirname "$0")
+mkdir -p "$DIR"/server/tmp/pid/
+mkdir -p "$DIR"/server/log/gc.log
 
-# 启动之前 先执行 rshutdown.sh
-sh ./rshutdown.sh $0 $1 $2
-
-# get arguments
-dir="$(cd "$( dirname "$0" )" && pwd)"
-rootpath="$(cd "$dir/.." && pwd)"
-SERVICE_NAME=$1
-
-#if this service is not shutwodn Please shutdown
-SERVICE_DIR=`dirname "$0"`
-PORT="$3"
-SERVICE_DIR=`cd "$bin"; pwd`
-
-PID_FILE="$SERVICE_DIR"/../tmp/pid/"$SERVICE_NAME"
-
-mkdir -p "$SERVICE_DIR"/../tmp/pid/
 
 if [ -e $PID_FILE ]; then
   PID_INFO=`cat $PID_FILE`
@@ -55,11 +41,11 @@ if [ -e $PID_FILE ]; then
   echo $SERVICE_PID
   if [ $SERVICE_PID ]; then
     echo "startup fail! Please close the service after to restart!"
-    echo `date` +"[$SERVICE_NAME] is running" >> ../log/monitor.log
+    echo `date` +"[$SERVICE_NAME] is running" >> server/log/monitor.log
     exit 1
   else
     echo "This service will startup!"
-    echo `date` +"[$SERVICE_NAME] is starting" >> ../log/monitor.log
+    echo `date` +"[$SERVICE_NAME] is starting" >> server/log/monitor.log
   fi
 fi
 
@@ -78,43 +64,19 @@ if [ $javacount -ge 1 ] ; then
   exit 1
 fi
 
-# get path
-DIR="bin"
-if [ "$DIR" = "bin" ]; then
-  DIR=`dirname "$0"`
-  DIR=`cd "$bin"; pwd`
-fi
 
-PROGNAME=`basename $0`
-ROOT_PATH="$DIR"/..
-PID_PATH="$ROOT_PATH"/tmp/pid
-
-# java opts
-if [ "$VM_XMS" = "" ]; then
-  VM_XMS=8g
-fi
-
-if [ "$VM_XMX" = "" ]; then
-  VM_XMX=8g
-fi
-
-if [ "$VM_XMN" = "" ]; then
-  VM_XMN=5g
-fi
-
-JAVA_OPTS="-Xms$VM_XMS -Xmx$VM_XMX -Xmn$VM_XMN -Xss1024K -XX:PermSize=256m -XX:MaxPermSize=512m -XX:ParallelGCThreads=20 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+UseCMSCompactAtFullCollection -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=15 -XX:CMSInitiatingOccupancyFraction=80 -XX:+PrintClassHistogram -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -Xloggc:../log/gc.log"
 
 # class path
 CLASS_PATH=.:"$JAVA_HOME"/lib/tools.jar
 
-for jar in $ROOT_PATH/lib/*.jar; do
+for jar in $DIR/server/lib/*.jar; do
   CLASS_PATH=$CLASS_PATH:$jar
 done
 
 # main class
 MAIN_CLASS=com.wuba.wlock.server.bootstrap.Main
 
-java -Xmx8g -Xms8g -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -XX:NewRatio=2 -XX:+PrintClassHistogram -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -Xloggc:../log/gc.log -XX:SurvivorRatio=8 -XX:MaxGCPauseMillis=200 -classpath $CLASS_PATH -Duser.dir=$DIR -Dport=$PORT $SYSTEM_PROPERTY $MAIN_CLASS >> /dev/null 2>&1 &
+java -Xmx8g -Xms8g -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -XX:NewRatio=2 -XX:+PrintClassHistogram -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -Xloggc:server/log/gc.log -XX:SurvivorRatio=8 -XX:MaxGCPauseMillis=200 -classpath $CLASS_PATH -Duser.dir=$DIR/server $MAIN_CLASS >> /dev/null 2>&1 &
 
 echo pid:$!
 
